--- a/authserver/build.gradle
+++ b/authserver/build.gradle
@@ -14,6 +14,8 @@ repositories {
 
 dependencies {
   implementation 'org.springframework.boot:spring-boot-starter'
+  implementation 'org.springframework.security:spring-security-oauth2-authorization-server:${authorizationServerVersion}'
+
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
