--- a/authserver/pom.xml
+++ b/authserver/pom.xml
@@ -27,13 +27,25 @@
       <version>1.0.1</version>
     </dependency>
     <dependency>
+      <artifactId>spring-security-oauth2</artifactId>
+      <groupId>org.springframework.security.oauth</groupId>
+      <version>2.5.2.RELEASE</version>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-webflux</artifactId>
+      <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-security</artifactId>
     </dependency>
+    <dependency>
+      <artifactId>jakarta.servlet-api</artifactId>
+      <groupId>jakarta.servlet</groupId>
+      <scope>provided</scope>
+      <version>6.0.0</version>
+    </dependency>
+
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
