--- a/domain-client/src/main/resources/application.yml
+++ b/domain-client/src/main/resources/application.yml
@@ -1,9 +1,3 @@
-server:
-  port: 8090
-
-spring:
-  security:
-    oauth2:
-      resourceserver:
-        jwt:
-          issuer-uri: http://localhost:9000
+grpc:
+  server:
+    port: 8080
