--- a/domain-client/pom.xml
+++ b/domain-client/pom.xml
@@ -15,23 +15,37 @@
   <properties>
     <java.version>17</java.version>
     <grpc.version>1.51.0</grpc.version>
+    <grpc.configuration.version>2.14.0.RELEASE</grpc.configuration.version>
+    <jakarta.annotation.version>1.3.5</jakarta.annotation.version>
+    <protobuf.protoc.version>3.22.1</protobuf.protoc.version>
+    <maven.plugin.os.version>1.7.1</maven.plugin.os.version>
+    <maven.plugin.protobuf.version>0.6.1</maven.plugin.protobuf.version>
   </properties>
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <scope>runtime</scope>
+    </dependency>
 
-    <!--gRPC-->
+    <!--gRPC server-->
     <dependency>
       <groupId>jakarta.annotation</groupId>
       <artifactId>jakarta.annotation-api</artifactId>
-      <version>1.3.5</version>
+      <version>${jakarta.annotation.version}</version>
     </dependency>
     <dependency>
       <groupId>net.devh</groupId>
       <artifactId>grpc-server-spring-boot-autoconfigure</artifactId>
-      <version>2.14.0.RELEASE</version>
+      <version>${grpc.configuration.version}</version>
     </dependency>
     <dependency>
       <groupId>io.grpc</groupId>
@@ -61,19 +75,18 @@
       <extension>
         <groupId>kr.motd.maven</groupId>
         <artifactId>os-maven-plugin</artifactId>
-        <version>1.7.1</version>
+        <version>${maven.plugin.os.version}</version>
       </extension>
     </extensions>
     <plugins>
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
-        <version>3.0.4</version>
       </plugin>
       <plugin>
         <groupId>org.xolstice.maven.plugins</groupId>
         <artifactId>protobuf-maven-plugin</artifactId>
-        <version>0.6.1</version>
+        <version>${maven.plugin.protobuf.version}</version>
         <executions>
           <execution>
             <id>compile</id>
@@ -85,7 +98,7 @@
         </executions>
         <configuration>
           <protocArtifact>
-            com.google.protobuf:protoc:3.22.1:exe:${os.detected.classifier}
+            com.google.protobuf:protoc:${protobuf.protoc.version}:exe:${os.detected.classifier}
           </protocArtifact>
           <pluginId>grpc-java</pluginId>
           <pluginArtifact>
