--- a/gateway-web/pom.xml
+++ b/gateway-web/pom.xml
@@ -14,6 +14,7 @@
   <name>gateway-web</name>
   <properties>
     <java.version>17</java.version>
+    <grpc.configuration.version>2.14.0.RELEASE</grpc.configuration.version>
   </properties>
   <dependencies>
     <dependency>
@@ -22,19 +23,16 @@
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-security</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+      <artifactId>spring-boot-starter-webflux</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-graphql</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>net.devh</groupId>
+      <artifactId>grpc-client-spring-boot-starter</artifactId>
+      <version>${grpc.configuration.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
