--- a/domain-client/pom.xml
+++ b/domain-client/pom.xml
@@ -20,6 +20,7 @@
     <protobuf.protoc.version>3.22.1</protobuf.protoc.version>
     <maven.plugin.os.version>1.7.1</maven.plugin.os.version>
     <maven.plugin.protobuf.version>0.6.1</maven.plugin.protobuf.version>
+    <reactor.version>3.5.3</reactor.version>
   </properties>
   <dependencies>
     <dependency>
@@ -61,6 +62,12 @@
       <groupId>io.grpc</groupId>
       <artifactId>grpc-stub</artifactId>
       <version>${grpc.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.projectreactor</groupId>
+      <artifactId>reactor-core</artifactId>
+      <version>${reactor.version}</version>
     </dependency>
 
     <dependency>
