--- a/domain-client/pom.xml
+++ b/domain-client/pom.xml
@@ -111,6 +111,7 @@
           <pluginArtifact>
             io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}
           </pluginArtifact>
+          <protoSourceRoot>${project.basedir}/../proto</protoSourceRoot>
         </configuration>
       </plugin>
     </plugins>
