--- a/gateway-web/pom.xml
+++ b/gateway-web/pom.xml
@@ -15,6 +15,11 @@
   <properties>
     <java.version>17</java.version>
     <grpc.configuration.version>2.14.0.RELEASE</grpc.configuration.version>
+    <grpc.version>1.51.0</grpc.version>
+    <protobuf.protoc.version>3.22.1</protobuf.protoc.version>
+    <maven.plugin.os.version>1.7.1</maven.plugin.os.version>
+    <maven.plugin.protobuf.version>0.6.1</maven.plugin.protobuf.version>
+    <jakarta.annotation.version>1.3.5</jakarta.annotation.version>
   </properties>
   <dependencies>
     <dependency>
@@ -29,6 +34,12 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-graphql</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>jakarta.annotation</groupId>
+      <artifactId>jakarta.annotation-api</artifactId>
+      <version>${jakarta.annotation.version}</version>
+    </dependency>
     <dependency>
       <groupId>net.devh</groupId>
       <artifactId>grpc-client-spring-boot-starter</artifactId>
@@ -42,10 +53,41 @@
   </dependencies>
 
   <build>
+    <extensions>
+      <extension>
+        <groupId>kr.motd.maven</groupId>
+        <artifactId>os-maven-plugin</artifactId>
+        <version>${maven.plugin.os.version}</version>
+      </extension>
+    </extensions>
     <plugins>
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.xolstice.maven.plugins</groupId>
+        <artifactId>protobuf-maven-plugin</artifactId>
+        <version>${maven.plugin.protobuf.version}</version>
+        <executions>
+          <execution>
+            <id>compile</id>
+            <goals>
+              <goal>compile</goal>
+              <goal>compile-custom</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <protocArtifact>
+            com.google.protobuf:protoc:${protobuf.protoc.version}:exe:${os.detected.classifier}
+          </protocArtifact>
+          <pluginId>grpc-java</pluginId>
+          <pluginArtifact>
+            io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}
+          </pluginArtifact>
+          <protoSourceRoot>${project.basedir}/../proto</protoSourceRoot>
+        </configuration>
       </plugin>
     </plugins>
   </build>
