--- a/gateway-web/src/main/resources/application.yml
+++ b/gateway-web/src/main/resources/application.yml
@@ -5,5 +5,6 @@ grpc:
   client:
     client-grpc-server:
       address: "localhost:8080"
+      negotiationType: PLAINTEXT
       enableKeepAlive: true
       keepAliveWithoutCalls: true
