--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
   <modules>
     <module>domain-client</module>
     <module>gateway-web</module>
+    <module>migration-postgres</module>
   </modules>
 
 </project>
