--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,9 +1,29 @@
-version: '3.1'
-services:
+version: "2"
 
-  db:
-    image: postgres
-    restart: always
+services:
+  zookeeper:
+    image: zookeeper:3.8
+    ports:
+      - "8005:2181"
+    volumes:
+      - "zookeeper_data:/bitnami"
     environment:
-      POSTGRES_PASSWORD: example
-      POSTGRES_USER: admin
+      - ALLOW_ANONYMOUS_LOGIN=yes
+  kafka:
+    image: bitnami/kafka:3.4
+    ports:
+      - "9092:9092"
+    volumes:
+      - "kafka_data:/bitnami"
+    environment:
+      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092
+      - ALLOW_PLAINTEXT_LISTENER=yes
+      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
+    depends_on:
+      - zookeeper
+
+volumes:
+  zookeeper_data:
+    driver: local
+  kafka_data:
+    driver: local
