--- a/domain-client/pom.xml
+++ b/domain-client/pom.xml
@@ -71,6 +71,11 @@
     </dependency>
 
     <dependency>
+      <artifactId>spring-kafka</artifactId>
+      <groupId>org.springframework.kafka</groupId>
+    </dependency>
+
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
