--- a/notification/pom.xml
+++ b/notification/pom.xml
@@ -25,15 +25,37 @@
 			<groupId>org.springframework.boot</groupId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<artifactId>jackson-databind</artifactId>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<version>${jackson.version}</version>
+		</dependency>
+
+		<dependency>
+			<artifactId>reactor-core</artifactId>
+			<groupId>io.projectreactor</groupId>
+			<version>${reactor.version}</version>
+		</dependency>
+
 		<dependency>
 			<artifactId>spring-kafka-test</artifactId>
 			<groupId>org.springframework.kafka</groupId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<artifactId>notification-api</artifactId>
+			<groupId>com.demidrolll.pet.bank</groupId>
+			<scope>compile</scope>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
 	</dependencies>
 	<groupId>com.demidrolll.pet.bank</groupId>
 	<modelVersion>4.0.0</modelVersion>
 	<name>notification</name>
+
 	<parent>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<groupId>org.springframework.boot</groupId>
@@ -41,7 +63,9 @@
 		<version>3.0.5</version> <!-- lookup parent from repository -->
 	</parent>
 	<properties>
+		<jackson.version>2.14.2</jackson.version>
 		<java.version>17</java.version>
+		<reactor.version>3.5.3</reactor.version>
 	</properties>
 
 	<version>0.0.1-SNAPSHOT</version>
