--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,6 +1,14 @@
 version: "3.8"
 
 services:
+  redis:
+    image: redis:6.0
+    restart: always
+    ports:
+      - "8007:6379"
+    volumes:
+      - redis_data:/var/lib/redis/data
+
   mail:
     image: rnwood/smtp4dev:3.2.0-ci20221023104
     ports:
@@ -59,6 +67,8 @@ services:
       - zookeeper
 
 volumes:
+  redis_data:
+    driver: local
   mail_data:
     driver: local
   zookeeper_data:
