--- a/gateway-web/pom.xml
+++ b/gateway-web/pom.xml
@@ -31,7 +31,6 @@
       <version>${graphql.scalars.version}</version>
     </dependency>
 
-
     <dependency>
       <groupId>jakarta.annotation</groupId>
       <artifactId>jakarta.annotation-api</artifactId>
@@ -42,11 +41,18 @@
       <artifactId>grpc-client-spring-boot-starter</artifactId>
       <version>${grpc.configuration.version}</version>
     </dependency>
+
+    <dependency>
+      <artifactId>spring-boot-starter-data-redis-reactive</artifactId>
+      <groupId>org.springframework.boot</groupId>
+    </dependency>
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
+
   </dependencies>
   <properties>
     <java.version>17</java.version>
